--- a/modules/mod_admin/translations/nl.po
+++ b/modules/mod_admin/translations/nl.po
@@ -279,7 +279,8 @@ msgstr "Verwijder"
 
 #: modules/mod_admin/templates/_admin_edit_content_publish.tpl:47
 msgid "Delete if no other page is connected to this page."
-msgstr "Verwijder als geen andere pagina's een connectie met deze pagina hebben."
+msgstr ""
+"Verwijder als geen andere pagina's een connectie met deze pagina hebben."
 
 #: modules/mod_admin/templates/_admin_edit_content_publish.tpl:81
 msgid "Delete this page."
@@ -437,6 +438,7 @@ msgid "Date ranges"
 msgstr "Datumreeksen"
 
 #: modules/mod_admin/templates/_admin_edit_content_page_connections.tpl:8
+#: modules/mod_admin/templates/_admin_edit_content_page_connections.tpl:6
 msgid "Page connections"
 msgstr "Paginaconnecties"
 
@@ -457,12 +459,10 @@ msgstr ""
 "zoekopdrachten</a> op de Zotonic website."
 
 #: modules/mod_admin/templates/_admin_edit_content_person.tpl:8
-msgid ""
-"Use the title of the base content for "
-"the display name of this person."
+msgid "Use the title of the base content for the display name of this person."
 msgstr ""
-"Gebruik de titel van de "
-"basisgegevens voor de naam zoals die wordt weergegeven op pagina's."
+"Gebruik de titel van de basisgegevens voor de naam zoals die wordt "
+"weergegeven op pagina's."
 
 #: modules/mod_admin/templates/admin_media.tpl:37
 msgid "Info"
@@ -638,10 +638,6 @@ msgstr "Geen media gevonden."
 #: modules/mod_admin/templates/admin_referrers.tpl:47
 msgid "No pages found."
 msgstr "Geen pagina's gevonden."
-
-#: modules/mod_admin/templates/_admin_edit_content_page_connections.tpl:6
-msgid "Page connections"
-msgstr "Paginaconnecties"
 
 #: modules/mod_admin/templates/_admin_edit_content_seo.tpl:54
 msgid "Page description"
