mod_admin: fix dialog header translation
#1020

--- a/modules/mod_admin/translations/et.po
+++ b/modules/mod_admin/translations/et.po
@@ -340,6 +340,10 @@ msgstr ""
 msgid "Edit"
 msgstr "Redigeeri"
 
+#: modules/mod_admin/actions/action_admin_dialog_edit_basics.erl:72
+msgid "Edit:"
+msgstr "Redigeeri:"
+
 #: modules/mod_admin/mod_admin.erl:160
 msgid "Embed page"
 msgstr ""
@@ -871,7 +875,7 @@ msgstr ""
 msgid "Show page on multiple paths"
 msgstr ""
 
-#: modules/mod_admin/actions/action_admin_dialog_edit_basics.erl:125
+#: modules/mod_admin/actions/action_admin_dialog_edit_basics.erl:128
 msgid "Something went wrong. Sorry."
 msgstr "Midagi l√§ks valesti. Sorry."
 
