--- a/modules/mod_admin/translations/de.po
+++ b/modules/mod_admin/translations/de.po
@@ -336,6 +336,10 @@ msgstr "E-Mail-Adresse"
 msgid "Edit"
 msgstr "Bearbeiten"
 
+#: modules/mod_admin/actions/action_admin_dialog_edit_basics.erl:72
+msgid "Edit:"
+msgstr "Bearbeiten:"
+
 #: modules/mod_admin/mod_admin.erl:160
 msgid "Embed page"
 msgstr ""
@@ -868,7 +872,7 @@ msgstr ""
 msgid "Show page on multiple paths"
 msgstr ""
 
-#: modules/mod_admin/actions/action_admin_dialog_edit_basics.erl:125
+#: modules/mod_admin/actions/action_admin_dialog_edit_basics.erl:128
 msgid "Something went wrong. Sorry."
 msgstr "Etwas lief schief. Entschuldigung!!"
 
