--- a/modules/mod_admin/translations/es.po
+++ b/modules/mod_admin/translations/es.po
@@ -343,6 +343,10 @@ msgstr ""
 msgid "Edit"
 msgstr "Editar"
 
+#: modules/mod_admin/actions/action_admin_dialog_edit_basics.erl:72
+msgid "Edit:"
+msgstr "Editar:"
+
 #: modules/mod_admin/mod_admin.erl:160
 msgid "Embed page"
 msgstr ""
@@ -877,7 +881,7 @@ msgstr ""
 msgid "Show page on multiple paths"
 msgstr ""
 
-#: modules/mod_admin/actions/action_admin_dialog_edit_basics.erl:125
+#: modules/mod_admin/actions/action_admin_dialog_edit_basics.erl:128
 msgid "Something went wrong. Sorry."
 msgstr ""
 
