--- a/modules/mod_admin/translations/tr.po
+++ b/modules/mod_admin/translations/tr.po
@@ -339,6 +339,10 @@ msgstr ""
 msgid "Edit"
 msgstr "Düzenle"
 
+#: modules/mod_admin/actions/action_admin_dialog_edit_basics.erl:72
+msgid "Edit:"
+msgstr "Düzenle:"
+
 #: modules/mod_admin/mod_admin.erl:160
 msgid "Embed page"
 msgstr "Sayfa yerleştir"
@@ -873,7 +877,7 @@ msgstr "Göster"
 msgid "Show page on multiple paths"
 msgstr ""
 
-#: modules/mod_admin/actions/action_admin_dialog_edit_basics.erl:125
+#: modules/mod_admin/actions/action_admin_dialog_edit_basics.erl:128
 msgid "Something went wrong. Sorry."
 msgstr "Bir hata oluştu. Üzgünüz."
 
