core: change stemming of the full text indexes.
This fixes a problem where the stemming of the full text index didn't match the stemming of the search query.
The stemmer is selected using the language code from either the i18n.language_stemmer or i18n.language configuration.
Call z_pivot_rsc:stemmer_language(Context) to see which PostgreSQL stemmer will be used.
You have to ensure that the selected stemmer is available in PostgresSQL.
With psql you can use the command '\dFd' to see the list of available stemmers.

Fixes #553

(cherry picked from commit d06488d512dafb78f0c2253e4a31ccc9b8c52e47)

--- a/doc/manuals/i18n.rst
+++ b/doc/manuals/i18n.rst
@@ -176,3 +176,16 @@ you to start translating your site by translating the most important
 pages first.
 
 
+Text searches, translations and stemming
+----------------------------------------
+
+For text searches a full text index is maintained. This full text index
+is stemmed according to the site’s configured default language.
+
+All translations are added to the same full text index. This combined text is
+stemmed using a single stemmer. The selected stemmer depends on the configured 
+default language (config key ``i18n.language``). The stemmer can be overruled by
+setting the config key ``i18n.language_stemmer`` to the two letter iso code of
+the language matching with the stemmer. You have to make sure that the stemmer
+is configured in PostgreSQL otherwise the pivot process will crash with a SQL error.
+
