--- a/modules/mod_signup/translations/nl.po
+++ b/modules/mod_signup/translations/nl.po
@@ -21,19 +21,15 @@ msgstr ""
 "X-Poedit-Country: NETHERLANDS\n"
 "X-Poedit-SourceCharset: utf-8\n"
 
-#: modules/mod_signup/templates/signup.tpl:161
-msgid "And sign up"
-msgstr "En registreer"
-
 #: modules/mod_signup/templates/signup_confirm.tpl:12
 msgid "Bring me to my profile page"
 msgstr "Terug naar mijn profielpagina"
 
-#: modules/mod_signup/templates/signup.tpl:146
+#: modules/mod_signup/templates/_signup_form_fields_tos.tpl:9
 msgid "Check our Terms of Service and Privacy policies"
 msgstr "Lees onze voorwaarden en privacy reglement"
 
-#: modules/mod_signup/templates/signup.tpl:115
+#: modules/mod_signup/templates/_signup_form_fields_username.tpl:10
 msgid "Choose a username and password"
 msgstr "Kies een gebruikersnaam en wachtwoord"
 
@@ -51,19 +47,40 @@ msgstr "Bevestig mijn account"
 msgid "Confirm my account."
 msgstr "Bevestig mijn account."
 
-#: modules/mod_signup/templates/signup.tpl:70
-msgid "Sign up with your e-mail address"
-msgstr "Aanmelden met je e-mailadres"
+#: modules/mod_signup/templates/_signup_stage.tpl:1
+msgid "Confirm your account by email"
+msgstr "Bevestig je aanmelding per email"
 
 #: modules/mod_signup/templates/email_verify.tpl:6
 msgid "Dear"
 msgstr "Beste"
 
-#: modules/mod_signup/templates/signup.tpl:103
-msgid "Email"
+#: modules/mod_signup/templates/_signup_form_fields_email.tpl:53
+msgid "E-mail"
 msgstr "E-mail"
 
-#: modules/mod_signup/templates/signup.tpl:75
+#: modules/mod_signup/templates/_signup_form_fields_email.tpl:22
+#: modules/mod_signup/templates/_signup_form_fields_email.tpl:44
+msgid "Enter a name"
+msgstr "Vul een naam in"
+
+#: modules/mod_signup/templates/_signup_form_fields_username.tpl:35
+msgid "Enter a password"
+msgstr "Vul een wachtwoord in"
+
+#: modules/mod_signup/templates/_signup_form_fields_username.tpl:19
+msgid "Enter a username"
+msgstr "Vul een gebruikersnaam in"
+
+#: modules/mod_signup/templates/_signup_form_fields_email.tpl:59
+msgid "Enter a valid address"
+msgstr "Vul een geldig adres in"
+
+#: modules/mod_signup/templates/_signup_form_fields_email.tpl:60
+msgid "Enter an e-mail address"
+msgstr "Vul een e-mailadres in"
+
+#: modules/mod_signup/templates/_signup_form_fields_email.tpl:16
 msgid "First name"
 msgstr "Voornaam"
 
@@ -71,19 +88,23 @@ msgstr "Voornaam"
 msgid "Hope to see you soon."
 msgstr "Hopelijk tot snel."
 
-#: modules/mod_signup/templates/signup.tpl:154
+#: modules/mod_signup/templates/_signup_form_fields_tos.tpl:22
 msgid "I agree to the"
-msgstr "Ik ga akkoord met"
-
-#: modules/mod_signup/templates/_logon_link.tpl:2
-msgid "I don’t have an account, please sign me up"
-msgstr "Ik heb geen account, registreer mij"
+msgstr "Ik ga akkoord met de"
 
 #: modules/mod_signup/templates/email_verify.tpl:14
 msgid "If the link does not work then you can go to"
 msgstr "Indien de link niet werkt dan kan je gaan naar"
 
-#: modules/mod_signup/templates/signup.tpl:57
+#: modules/mod_signup/templates/_signup_stage.tpl:5
+msgid ""
+"If you do not receive the e-mail within a few minutes, please check your "
+"spam folder."
+msgstr ""
+"Wanneer je binnen een paar minuten geen e-mail ontvangt, controleer dan je "
+"spamfolder."
+
+#: modules/mod_signup/templates/_signup_outside.tpl:1
 msgid "If you have already an account,"
 msgstr "Wanneer je al een account hebt"
 
@@ -92,61 +113,82 @@ msgid ""
 "In your e-mail you received a confirmation key. Please copy it in the input "
 "field below."
 msgstr ""
-"In je e-mail heb je een bevestigingscode ontvangen.  Kopiëer die code in het "
+"In je e-mail heb je een bevestigingscode ontvangen. Kopiëer die code in het "
 "onderstaande veld."
 
-#: modules/mod_signup/templates/email_verify.tpl:16
-msgid "Kind regards,"
-msgstr "Met vriendelijke groet,"
-
-#: modules/mod_signup/templates/signup.tpl:93
+#: modules/mod_signup/templates/_signup_form_fields_email.tpl:38
 msgid "Last name"
 msgstr "Achternaam"
 
-#: modules/mod_signup/templates/signup.tpl:126
+#: modules/mod_signup/templates/_signup_form_fields_username.tpl:42
+msgid "Minimum characters:"
+msgstr "Minimum aantal tekens:"
+
+#: modules/mod_signup/templates/_signup_form_fields_username.tpl:38
+msgid "Minimum characters: "
+msgstr "Minimum aantal tekens:"
+
+#: modules/mod_signup/templates/_logon_link.tpl:2
+msgid "No account yet?"
+msgstr "Nog geen account?"
+
+#: modules/mod_signup/templates/_signup_form_fields_username.tpl:32
 msgid "Password"
 msgstr "Wachtwoord"
 
 #: modules/mod_signup/templates/email_verify.tpl:3
 msgid "Please confirm your account"
-msgstr "Bevestig a.u.b. je account"
+msgstr "Bevestig je account"
+
+#: modules/mod_signup/templates/_signup_stage.tpl:3
+msgid "Please follow the instructions in the email we've sent you."
+msgstr "Volg de instructies in de e-mail die we je hebben gestuurd."
 
 #: modules/mod_signup/templates/email_verify.tpl:10
 msgid "Please follow the link below."
-msgstr "Gelieve de onderstaande link te volgen."
+msgstr "Volg onderstaande link."
 
-#: modules/mod_signup/templates/signup.tpl:87
+#: modules/mod_signup/templates/_signup_form_fields_email.tpl:31
 msgid "Prefix"
 msgstr "Tussenvoegsel"
 
-#: modules/mod_signup/templates/signup.tpl:155
+#: modules/mod_signup/templates/_signup_form_fields_tos.tpl:23
 msgid "Privacy policies"
 msgstr "Privacy reglement"
 
+#: modules/mod_signup/templates/_signup_form_fields_username.tpl:52
+msgid "Repeat your password"
+msgstr "Herhaal je wachtwoord"
+
+#: modules/mod_signup/templates/_signup_form_fields.tpl:5
 #: modules/mod_signup/templates/signup.tpl:3
-#: modules/mod_signup/templates/signup.tpl:164
 msgid "Sign Up"
 msgstr "Aanmelden"
 
-#: modules/mod_signup/templates/signup.tpl:55
-msgid "Sign up and become a member"
-msgstr "Meld je aan en wordt lid"
+#: modules/mod_signup/templates/_logon_link.tpl:2
+#: modules/mod_signup/templates/_signup_title.tpl:1
+msgid "Sign up"
+msgstr "Aanmelden"
+
+#: modules/mod_signup/templates/_signup_form_fields_email.tpl:11
+msgid "Sign up with your e-mail address"
+msgstr "Aanmelden met je e-mailadres"
 
 #: modules/mod_signup/templates/signup_confirm.tpl:20
 msgid "Sorry, I don't know that confirmation code. Did you copy it correctly?"
-msgstr "Sorry, de bevestigingscode is onbekend. Is hij correct gekopiëerd?"
+msgstr "Sorry, de bevestigingscode is onbekend. Is deze goed gekopiëerd?"
 
-#: modules/mod_signup/templates/signup.tpl:72
+#: modules/mod_signup/templates/_signup_box.tpl:24
 msgid ""
 "Sorry, there is already an account coupled to your account at your service "
 "provider. Maybe your account here was suspended."
 msgstr ""
 "Sorry, er is hier al een account gekoppeld aan het account van de service "
-"provider.  Misschien is het account hier geblokkeerd."
+"provider. Misschien is het account hier geblokkeerd."
 
-#: modules/mod_signup/templates/signup.tpl:117
-msgid "Sorry, this username is already in use. Please try another one."
-msgstr "Sorry, deze gebruikersnaam is al in gebruik. Probeer een andere naam."
+#: modules/mod_signup/templates/_signup_form_fields_tos.tpl:22
+msgid "Terms of Service"
+msgstr "Gebruiksvoorwaarden"
 
 #: modules/mod_signup/templates/email_verify.tpl:8
 msgid ""
@@ -156,34 +198,30 @@ msgstr ""
 "Bedank voor het registreren bij onze website.  Wij verzoeken je om je "
 "account te bevestigen voordat je het kan gebruiken."
 
-#: modules/mod_signup/templates/signup.tpl:151
+#: modules/mod_signup/templates/_signup_form_fields_username.tpl:53
+msgid "This does not match the first password"
+msgstr "Dit komt niet overeen met het eerste wachtwoord"
+
+#: modules/mod_signup/templates/_signup_form_fields_tos.tpl:14
 msgid ""
 "To sign up you must agree with the Terms of Service and Privacy policies."
 msgstr ""
 "Om te registreren moet je akkoord gaan met de gebruiksvoorwaarden en het "
 "privacy reglement."
 
-#: modules/mod_signup/templates/signup.tpl:120
+#: modules/mod_signup/templates/_signup_form_fields_username.tpl:15
 msgid "Username"
 msgstr "Gebruikersnaam"
 
-#: modules/mod_signup/templates/signup.tpl:134
+#: modules/mod_signup/templates/_signup_form_fields_username.tpl:49
 msgid "Verify password"
 msgstr "Bevestig wachtwoord"
 
-#: modules/mod_signup/templates/signup.tpl:173
-msgid ""
-"In the e-mail you will find instructions on how "
-"to confirm your account."
-msgstr ""
-"In de e-mail vind je instructies hoe je "
-"je account kan bevestigen."
-
-#: modules/mod_signup/templates/signup.tpl:149
+#: modules/mod_signup/templates/_signup_form_fields_tos.tpl:13
 msgid ""
 "We will be very careful with all the information given to us and will never "
-"give your name or address away without your permission.\n"
-"\t\t\tWe do have some rules that we need you to agree with."
+"give your name or address away without your permission. We do have some "
+"rules that we need you to agree with."
 msgstr ""
 "We zijn erg zorgvuldig met alle persoonlijk informatie die ons wordt "
 "verstrekt en zullen nooit je naam of adres weggeven zonder je toestemming.\n"
@@ -193,47 +231,42 @@ msgstr ""
 msgid "Welcome"
 msgstr "Welkom"
 
-#: modules/mod_signup/templates/signup.tpl:175
-msgid ""
-"When you don’t receive the e-mail within a few minutes then be sure to check "
-"your spam filter and spam folders."
-msgstr ""
-"Wanneer je binnen een paar minuten geen e-mail ontvangt, controleer dan je "
-"spam filters en spam mappen."
-
-#: modules/mod_signup/templates/signup.tpl:171
-msgid "Confirm your account by email"
-msgstr "Bevestig je aanmelding per email"
-
-#: modules/mod_signup/templates/signup.tpl:60
+#: modules/mod_signup/templates/_signup_extra.tpl:2
 msgid "You can also"
 msgstr "Je kan ook"
+
+#: modules/mod_signup/templates/_signup_form_fields_tos.tpl:26
+msgid "You must agree to the Terms in order to sign up."
+msgstr "Om je aan te melden moet je akkoord gaan met de gebruiksvoorwaarden."
 
 #: modules/mod_signup/templates/signup_confirm.tpl:10
 msgid "Your account is confirmed. You can now continue on our site."
 msgstr "Je account is bevestigd. Je kan nu verder gaan op onze website."
 
+#: modules/mod_signup/templates/_signup_form_fields_username.tpl:38
+msgid "Your password is too short."
+msgstr "Je wachtwoord is te kort."
+
 #: modules/mod_signup/templates/email_verify.tpl:14
 msgid "and enter the key"
 msgstr "en vul de code in"
 
-#: modules/mod_signup/templates/signup.tpl:155
+#: modules/mod_signup/templates/_signup_form_fields_tos.tpl:23
 msgid "and the"
-msgstr "en de"
+msgstr "en het"
 
 #: modules/mod_signup/templates/email_verify.tpl:14
 msgid "in the input field."
 msgstr "in het invoerveld"
 
-#: modules/mod_signup/templates/signup.tpl:57
+#: modules/mod_signup/templates/_signup_extra.tpl:9
+msgid "or"
+msgstr "of"
+
+#: modules/mod_signup/templates/_signup_outside.tpl:1
 msgid "sign in"
 msgstr "log in"
 
-#: modules/mod_signup/templates/signup.tpl:60
+#: modules/mod_signup/templates/_signup_extra.tpl:2
 msgid "sign up for a username and password"
 msgstr "registreer voor een gebruikersnaam en wachtwoord"
-
-#~ msgid ""
-#~ "We will be very careful with all the information given to us and will "
-#~ "never "
-#~ msgstr "Wij zijn voorzichtig met al je gegevens en zullen je nooit"
