--- a/modules/mod_survey/translations/es.po
+++ b/modules/mod_survey/translations/es.po
@@ -420,7 +420,7 @@ msgstr ""
 
 #: modules/mod_survey/templates/_admin_edit_content.survey.tpl:27
 #, fuzzy
-msgid "Show results to user after completion of survey"
+msgid "Show results to user after completion (only results for multiple choice questions are shown)"
 msgstr "Mostrar los resultados a usuarios después de completar la encuesta"
 
 #: modules/mod_survey/templates/_admin_edit_content.survey.tpl:75
