--- a/modules/mod_survey/translations/zh.po
+++ b/modules/mod_survey/translations/zh.po
@@ -425,7 +425,7 @@ msgid "Show progress information as “<em>Question 3/10</em>”"
 msgstr "显示进度信息，如“<em>问题 3/10</em>”"
 
 #: modules/mod_survey/templates/_admin_edit_content.survey.tpl:27
-msgid "Show results to user after completion of survey"
+msgid "Show results to user after completion (only results for multiple choice questions are shown)"
 msgstr "完成问卷调查后显示结果"
 
 #: modules/mod_survey/templates/_admin_edit_content.survey.tpl:77
