--- a/modules/mod_survey/translations/fr.po
+++ b/modules/mod_survey/translations/fr.po
@@ -417,7 +417,7 @@ msgid "Show progress information as “<em>Question 3/10</em>”"
 msgstr ""
 
 #: modules/mod_survey/templates/_admin_edit_content.survey.tpl:27
-msgid "Show results to user after completion of survey"
+msgid "Show results to user after completion (only results for multiple choice questions are shown)"
 msgstr ""
 
 #: modules/mod_survey/templates/_admin_edit_content.survey.tpl:75
